[gd_scene load_steps=47 format=3 uid="uid://cs2u4y8erat1"]

[ext_resource type="Texture2D" uid="uid://dtm1qb0b1kqca" path="res://Assets/fox/Fox Sprite Sheet.png" id="1_f5wba"]
[ext_resource type="Script" path="res://Scripts/fox.gd" id="1_s7y3g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vqntk"]
atlas = ExtResource("1_f5wba")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcw45"]
atlas = ExtResource("1_f5wba")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo5yb"]
atlas = ExtResource("1_f5wba")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf5kc"]
atlas = ExtResource("1_f5wba")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf0rm"]
atlas = ExtResource("1_f5wba")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_naglt"]
atlas = ExtResource("1_f5wba")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e66fc"]
atlas = ExtResource("1_f5wba")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs86d"]
atlas = ExtResource("1_f5wba")
region = Rect2(256, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii3bk"]
atlas = ExtResource("1_f5wba")
region = Rect2(288, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh7kv"]
atlas = ExtResource("1_f5wba")
region = Rect2(320, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjwmm"]
atlas = ExtResource("1_f5wba")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mstv"]
atlas = ExtResource("1_f5wba")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr4ls"]
atlas = ExtResource("1_f5wba")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q15h0"]
atlas = ExtResource("1_f5wba")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6ngb"]
atlas = ExtResource("1_f5wba")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_faxdd"]
atlas = ExtResource("1_f5wba")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttp62"]
atlas = ExtResource("1_f5wba")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_haxuo"]
atlas = ExtResource("1_f5wba")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1bf2"]
atlas = ExtResource("1_f5wba")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76i2n"]
atlas = ExtResource("1_f5wba")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu0lg"]
atlas = ExtResource("1_f5wba")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyw5h"]
atlas = ExtResource("1_f5wba")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_58l3u"]
atlas = ExtResource("1_f5wba")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8v10"]
atlas = ExtResource("1_f5wba")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_koeyk"]
atlas = ExtResource("1_f5wba")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl6fb"]
atlas = ExtResource("1_f5wba")
region = Rect2(160, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_p6toy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqntk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcw45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo5yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf5kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf0rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naglt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e66fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs86d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii3bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh7kv")
}],
"loop": true,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjwmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mstv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr4ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q15h0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6ngb")
}],
"loop": false,
"name": &"detect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_faxdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttp62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haxuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1bf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76i2n")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu0lg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyw5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58l3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8v10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koeyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl6fb")
}],
"loop": true,
"name": &"sleep",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_n3cef"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jpej3"]
resource_name = "attack"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_ixsem"]
resource_name = "detect"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"detect"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_0q388"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_8oe4s"]
resource_name = "sleep"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"sleep"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yihtx"]
_data = {
"RESET": SubResource("Animation_n3cef"),
"attack": SubResource("Animation_jpej3"),
"detect": SubResource("Animation_ixsem"),
"idle": SubResource("Animation_0q388"),
"sleep": SubResource("Animation_8oe4s")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7x66q"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q2m8h"]
animation = &"detect"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x5bm2"]
animation = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b4con"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0g6g0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4aie7"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2lctl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wivip"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_yegv5"]
states/attack/node = SubResource("AnimationNodeAnimation_7x66q")
states/attack/position = Vector2(453, 51)
states/detect/node = SubResource("AnimationNodeAnimation_q2m8h")
states/detect/position = Vector2(347, 51)
states/idle/node = SubResource("AnimationNodeAnimation_x5bm2")
states/idle/position = Vector2(347, 158)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_b4con"), "idle", "detect", SubResource("AnimationNodeStateMachineTransition_0g6g0"), "detect", "attack", SubResource("AnimationNodeStateMachineTransition_4aie7"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_2lctl"), "attack", "End", SubResource("AnimationNodeStateMachineTransition_wivip")]

[sub_resource type="CircleShape2D" id="CircleShape2D_3olm6"]
radius = 129.016

[sub_resource type="CircleShape2D" id="CircleShape2D_0gmdh"]
radius = 8.06226

[node name="fox" type="CharacterBody2D" node_paths=PackedStringArray("nav_agent")]
y_sort_enabled = true
collision_layer = 4
collision_mask = 9
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_s7y3g")
nav_agent = NodePath("Guidance/NavigationAgent2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -16)
sprite_frames = SubResource("SpriteFrames_p6toy")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_yihtx")
}

[node name="AnimationTree" type="AnimationTree" parent="AnimatedSprite2D"]
tree_root = SubResource("AnimationNodeStateMachine_yegv5")
anim_player = NodePath("../AnimationPlayer")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(2, -5)
shape = SubResource("CircleShape2D_3olm6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -7)
shape = SubResource("CircleShape2D_0gmdh")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="RayCasts" type="Node2D" parent="."]
visible = false
position = Vector2(0, -3)

[node name="N" type="RayCast2D" parent="RayCasts"]
rotation = 3.14159
scale = Vector2(1, 0.5)
collision_mask = 8

[node name="NE" type="RayCast2D" parent="RayCasts"]
rotation = -2.35619
scale = Vector2(1, 0.35)
collision_mask = 8

[node name="E" type="RayCast2D" parent="RayCasts"]
rotation = -1.5708
scale = Vector2(1, 0.5)
collision_mask = 8

[node name="SE" type="RayCast2D" parent="RayCasts"]
rotation = -0.785398
scale = Vector2(1, 0.35)
collision_mask = 8

[node name="S" type="RayCast2D" parent="RayCasts"]
scale = Vector2(1, 0.5)
collision_mask = 8

[node name="SW" type="RayCast2D" parent="RayCasts"]
rotation = 0.785398
scale = Vector2(1, 0.35)
collision_mask = 8

[node name="W" type="RayCast2D" parent="RayCasts"]
rotation = 1.5708
scale = Vector2(1, 0.5)
collision_mask = 8

[node name="NW" type="RayCast2D" parent="RayCasts"]
rotation = 2.35619
scale = Vector2(1, 0.35)
collision_mask = 8

[node name="Guidance" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Guidance"]
path_max_distance = 200.0
debug_enabled = true

[node name="Timer" type="Timer" parent="Guidance"]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout_nav"]
